--- a/index.html
+++ b/index.html
@@ -1,1 +1,16 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="Favicon.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=VT323&display=swap" rel="stylesheet"><title>А вы готовы?</title><link href="css/app.3499d671.css" rel="preload" as="style"><link href="js/app.fbfd6b17.js" rel="preload" as="script"><link href="js/chunk-vendors.5269176e.js" rel="preload" as="script"><link href="css/app.3499d671.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but "А вы готовы?" doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="js/chunk-vendors.5269176e.js"></script><script src="js/app.fbfd6b17.js"></script></body></html>
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"> <meta name="yandex-verification" content="c80d8808132e78d3" /><link rel="icon" href="Favicon.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=VT323&display=swap" rel="stylesheet"><title>А вы готовы?</title><link href="css/app.f04dd787.css" rel="preload" as="style"><link href="js/app.0770e090.js" rel="preload" as="script"><link href="js/chunk-vendors.5269176e.js" rel="preload" as="script"><link href="css/app.f04dd787.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but "Are you ready?" doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id="app"></div><script src="js/chunk-vendors.5269176e.js"></script><script src="js/app.0770e090.js"></script><!-- Yandex.Metrika counter -->
+  <script type="text/javascript" >
+    (function(m,e,t,r,i,k,a){m[i]=m[i]function(){(m[i].a=m[i].a[]).push(arguments)};
+    m[i].l=1*new Date();
+    for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
+    k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
+    (window, document, "script", "https://mc.yandex.ru/metrika/tag.js", "ym");
+  
+    ym(90886799, "init", {
+          clickmap:true,
+          trackLinks:true,
+          accurateTrackBounce:true
+    });
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/90886799" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter --></body></html>
