--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
-<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="Favicon.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=VT323&display=swap" rel="stylesheet"><title>А вы готовы?</title><link href="css/app.622f143c.css" rel="preload" as="style"><link href="js/app.53824f5d.js" rel="preload" as="script"><link href="js/chunk-vendors.53e698d2.js" rel="preload" as="script"><link href="css/app.622f143c.css" rel="stylesheet"><!-- Yandex.Metrika counter -->
+<!DOCTYPE html><html lang=""><head><meta charset="utf-8"><meta http-equiv="X-UA-Compatible" content="IE=edge"><meta name="viewport" content="width=device-width,initial-scale=1"><link rel="icon" href="Favicon.png"><link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin><link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&family=VT323&display=swap" rel="stylesheet"><title>А вы готовы?</title><link href="css/app.9f08ddb6.css" rel="preload" as="style"><link href="js/app.02de489c.js" rel="preload" as="script"><link href="js/chunk-vendors.53e698d2.js" rel="preload" as="script"><link href="css/app.9f08ddb6.css" rel="stylesheet"></head><body><noscript><strong>We're sorry but "А вы готовы?" doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript>
+  <!-- Yandex.Metrika counter -->
   <script type="text/javascript" >
-    (function(m,e,t,r,i,k,a){m[i]=m[i]function(){(m[i].a=m[i].a[]).push(arguments)};
+  (function(m,e,t,r,i,k,a){m[i]=m[i]function(){(m[i].a=m[i].a[]).push(arguments)};
     m[i].l=1*new Date();
     for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
     k=e.createElement(t),a=e.getElementsByTagName(t)[0],k.async=1,k.src=r,a.parentNode.insertBefore(k,a)})
@@ -11,4 +12,6 @@
           trackLinks:true,
           accurateTrackBounce:true
   });
-  </script></head><body><noscript><strong>We're sorry but "А вы готовы?" doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><noscript><div><img src="https://mc.yandex.ru/watch/90886799" style="position:absolute; left:-9999px;" alt="" /></div></noscript><div id="app"></div><script src="js/chunk-vendors.53e698d2.js"></script><script src="js/app.53824f5d.js"></script></body></html>
+  </script>
+  <noscript><div><img src="https://mc.yandex.ru/watch/90886799" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+  <!-- /Yandex.Metrika counter --><div id="app"></div><script src="js/chunk-vendors.53e698d2.js"></script><script src="js/app.02de489c.js"></script></body></html>
